--- a/src/style.less
+++ b/src/style.less
@@ -1,8 +1,10 @@
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
+html,
 body {
   margin: 0;
+  height: 100%;
 }
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
