refactor: style refinement

--- a/src/views/index/index.less
+++ b/src/views/index/index.less
@@ -1,17 +1,18 @@
 .el-container {
   //   height: 100%;
   .el-header {
-    border: 1px solid #e4e7ed;
+    border-bottom: 1px solid #e4e7ed;
     background-color: #fff;
   }
   .el-aside {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 60px);
     background-color: #f7f9fb;
-    border: 1px solid #e4e7ed;
+    border-right: 1px solid #e4e7ed;
   }
   .el-main {
     position: relative;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 60px);
     background-color: #f3f4f6;
+    padding: 0;
   }
 }
