--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,17 +1,34 @@
 .el-container {
   .el-header {
-    border-bottom: 1px solid #e4e7ed;
-    background-color: #fff;
+    //box-shadow: 2px 2px #e4e7ed;
+    background-color:#FFF;
+    border-bottom: 1px solid rgba(6,7,9,0.1);
+    //box-shadow: 0 6px 8px 0 rgba(29,28,35,.06),0 0 2px 0 rgba(29,28,35,.18);
+    z-index: 2;
   }
   .el-aside {
+    position: relative;
     height: calc(100vh - 60px);
     background-color: #f7f9fb;
-    border-right: 1px solid #e4e7ed;
+    //border-right: 2px solid #e4e7ed;
+    //border-right: 1px solid rgba(6,7,9,0.1);
+    box-shadow:  6px 0  8px 0 rgba(29,28,35,.06),0 0 2px 0 rgba(29,28,35,.18);
+    z-index: 1;
   }
   .el-main {
     position: relative;
     height: calc(100vh - 60px);
-    background-color: #f3f4f6;
+    //background-color: #f7f9fb;
+    background-color:#F4F4F6;
     padding: 0;
   }
+}
+.case-button {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+.question-button{
+  position: absolute;
+  bottom: 20px;
 }
