--- a/src/style.less
+++ b/src/style.less
@@ -1,3 +1,5 @@
+@bg-color: #F4F4F6;
+
 html,
 body {
   margin: 0;
@@ -5,4 +7,14 @@ body {
 }
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.fade-enter, .fade-leave-to {
+  opacity: 0
+}
+.fade-leave, .fade-enter-to {
+  opacity: 1
+}
+.fade-enter-active, .fade-leave-active {
+  transition: all .2s
 }
